skeplib/tests/fixtures/resolver/invalid/namespace_direct_import_conflict/main.sk
import a;
from b import a;
fn main() -> Int { return 0; }
